src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_NestedControlTemplate.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<!--
/*******************************************************************
 * Purpose: Verifies a ControlTemplate as a child of ControlTemplate
 *          causes the correct error.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_NestedControlTemplate.xaml $
********************************************************************/
-->
<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">

    <Button Width="100" Style="{x:Null}">
        <Button.Template>
            <ControlTemplate>
                <ControlTemplate />
            </ControlTemplate>
        </Button.Template>
    </Button>

</Canvas>

</Page>
